# mentoria-python

./: README.md  main.py  pyproject.toml
Aula01/Iteraveis/: dict.py  list.py
Aula01/variaveis/: variaveis_primitivas.py
Aula02/api/: api_cat.py  api_cat_response.py  api_currency_quote.py  api_dog.py  api_dog_reponse.py  api_hp.py
Aula02/api/fundamental_api/: symbols.py
Aula02/api/gorila/: position.py  user_api.py
Aula02/json/: json_exemplos.py
Multiprocessamentos/: .pylintrc  exemplo01.py  install.ps1  main.py  pyproject.toml
Multiprocessamentos/src/core/: icon_getter.py
Multiprocessamentos/src/services/: decorators.py  poke_api.py
