[tool.poetry]
name = "mentoria-python"
version = "0.1.0"
description = ""
authors = ["Integrations Team <integrations@gorilainvest.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
